--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "set-env": "npx ts-node set-env.ts",
     "start": "npm run set-env && ng serve",
-    "build": "ng build",
+    "build": "npx ts-node set-env.ts && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:movie-db": "node dist/movie-db/server/server.mjs"
